Program now accesses URL for help. Improved README.md